# SALogViewer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.374732e  LogViewer.cpp  LogViewer.h  ProtosLogViewer_en_US.ts  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  saved_params.json  saved_params2.json  todo.txt
CSV/: CSVParser.cpp  CSVParser.h
CustomTicker/: MsecTicker.cpp  MsecTicker.h
DB_Driver/: PSQL_Driver.cpp  PSQL_Driver.h
LogItem/: LogItem.cpp  LogItem.h  logitemcfgdlg.cpp  logitemcfgdlg.h  logitemcfgdlg.ui  measurementview.cpp  measurementview.h  measurementview.ui  tooltipframe.cpp  tooltipframe.h  tooltipframe.ui
Resource/: resource.rc
Resources/: files.qrc
Resources/css/: dbsettings.css  main.css  plot.css
TreeModel/: treeModel.cpp  treeModel.h
build-ProtosLogViewer-Desktop-Debug/: CMakeCache.txt.prev  cmake_install.cmake
build-ProtosLogViewer-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-72071a8b1ae3f48a2982.json  directory-qcustomplot-Debug-579a435c04da251a2c17.json  target-ProtosLogViewer_autogen-Debug-b0caf363bbb7d1a16d0e.json  target-qcustomplot-Debug-64bea0c98e0eca970664.json
build-ProtosLogViewer-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-86e7da9f0e5edcf714fd.json  codemodel-v2-d7e73a30463aab355345.json  index-2023-01-25T10-45-27-0184.json  target-ProtosLogViewer-Debug-ff4c33f67b06c002dbc1.json  target-qcustomplot_autogen-Debug-de55fbbb40ff50cc35d1.json
build-ProtosLogViewer-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-ProtosLogViewer-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: DBConfigWidget.cpp.878AE9B90E7ADCFF.idx  DBConfigWidget.h.C1367E3D4E441AAD.idx  ItemModel.cpp.10FF90B4FE92EB66.idx  ItemModel.h.3E6F50D818D6617D.idx  LogItem.cpp.C73D32E90D210089.idx  LogItem.h.DA9213DA946DF45E.idx  LogViewer.cpp.0427121C2848C1B7.idx  LogViewer.h.07D66E1E3AA4E359.idx  PSQL_Driver.cpp.9741064C222B968A.idx  PSQL_Driver.h.25979B5B48C0F76E.idx  QModelIndex.F69DF0D383CF9415.idx  QTreeView.CD105E77A9D889B0.idx  Settings_dlg.cpp.7A4861EBF3EDAEC2.idx  Settings_dlg.h.B87694C534A23837.idx  TreeItem.cpp.3DE85935592F06B1.idx  TreeItem.h.B1708C54599C4941.idx  _bsd_types.h.FF501DFDB7CBB19D.idx  _fd_types.h.8FF4C257701A5227.idx  _ip_mreq1.h.9E583519C129E33D.idx  _ip_types.h.DACE916B1BEDDBCF.idx  _mingw.h.4F0DF34E1A2A9468.idx  _mingw_ddk.h.D1B1D320A8D52228.idx  _mingw_mac.h.E8691362939EDEB8.idx  _mingw_off_t.h.D3704DE457583433.idx  _mingw_secapi.h.D79DAB921370C75C.idx  _mingw_stat64.h.3CC9BBC70CA2E96B.idx  _mingw_unicode.h.FE116A00E75359B7.idx  _socket_types.h.932D9A83699581D1.idx  _timeval.h.08356DD786DEA5A8.idx  _wsa_errnos.h.4512F39FDA116684.idx  _wsadata.h.372ADF52EED10F90.idx  _xmitfile.h.5BEAC1F9FD9D22FB.idx  algorithm.C017841120A3F08F.idx  algorithmfwd.h.58D0580B83F54EF9.idx  aligned_buffer.h.5EC0248919140834.idx  alloc_traits.h.195835824D91D066.idx  alloc_traits.h.CA37DAA55470B4F9.idx  allocated_ptr.h.052B6476AA2AE1FE.idx  allocator.h.4A7688ABDB35076E.idx  apiset.h.CF8115B958F23932.idx  (+431 more)
build-ProtosLogViewer-Desktop-Debug/ProtosLogViewer_autogen/: moc_predefs.h
build-ProtosLogViewer-Desktop-Debug/ProtosLogViewer_autogen/5EM4WZGM37/: moc_ItemModel.cpp.d  moc_treeModel.cpp.d
build-ProtosLogViewer-Desktop-Debug/ProtosLogViewer_autogen/6Z7X6G5ODA/: moc_DBConfigWidget.cpp.d  moc_Settings_dlg.cpp.d  moc_dbsettingswdgt.cpp.d
build-ProtosLogViewer-Desktop-Debug/ProtosLogViewer_autogen/EWIEGA46WW/: moc_LogViewer.cpp.d  moc_mainwindow.cpp.d
build-ProtosLogViewer-Desktop-Debug/qcustomplot/: cmake_install.cmake
build-ProtosLogViewer-Desktop-Debug/qcustomplot/qcustomplot_autogen/EWIEGA46WW/: moc_qcustomplot.cpp.d
cmake/: toolchain.cmake
items_loader_from_csv/: CSVItemsLoader.cpp  CSVItemsLoader.h  CSVItemsLoader.ui  CSVParser.cpp  CSVParser.h
items_loader_from_db/: dateconfdlg.cpp  dateconfdlg.h  dateconfdlg.ui  itemsloader.cpp  itemsloader.h  itemsloader.ui
psql_libs/inc/: cpl_vsi.h
psql_libs/inc/internal/: c.h
psql_libs/inc/server/: pg_config.h
psql_libs/inc/server/parser/: gram.h
psql_libs/inc/unicode/: alphaindex.h  bytestriebuilder.h  calendar.h  casemap.h  choicfmt.h  coll.h  decimfmt.h  dtitvfmt.h  fmtable.h  localebuilder.h  localematcher.h  msgfmt.h  normlzr.h  numberformatter.h  numfmt.h  numsys.h  plurfmt.h  ptypes.h  rbnf.h  regex.h  region.h  smpdtfmt.h  strenum.h  tblcoll.h  translit.h  tzfmt.h  uclean.h  uniset.h  unistr.h  uregion.h  uspoof.h  utext.h
qcustomplot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
view_Settings/: Settings_dlg.cpp  Settings_dlg.h  dbsettingswdgt.cpp  dbsettingswdgt.h  dbsettingswdgt.ui
view_load_items_from_csv/: CSVItemsLoader.cpp  CSVItemsLoader.h  CSVItemsLoader.ui  CSVParser.cpp  CSVParser.h
view_load_items_from_db/: itemsloader.cpp  itemsloader.h  itemsloader.ui
view_treeview/: ItemModel.cpp  ItemModel.h  TreeItem.cpp  TreeItem.h  treeModel.cpp  treeModel.h
